Middle ground for padding on main in smaller screens (try to avoid overflow)

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -58,7 +58,7 @@ main {
 
 @media (max-width: 767px) {
   main {
-    padding: 0.5rem;
+    padding: 1rem;
   }
 }
 
